@@ -6,6 +6,8 @@ Revision 0.2.2, released XX-06-2017
 - Unique, system-wide request identifier implemented under the name
   of callflow-id
 - System logging reworked for uniformity and usability
+- Fix to catch errors coming from SNMP engine when sending malformed
+  message SNMP
 
 Revision 0.2.1, released 28-05-2017
 -----------------------------------
